use nanotime precision for took field
